# qr-signing

./: Cargo.toml  package-lock.json  package.json  webpack.config.js
src/: app.rs  crypto.rs  html5_qrcode.rs  lib.rs  qr_generator.rs  qr_reader.rs
static/: app.css  index.html
