# You must change these to your own details.
[package]
name = "qr-validate"
description = ""
version = "0.1.0"
authors = ["Andreas Monitzer <metalab@monitzer.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
wee_alloc = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
