# You must change these to your own details.
[package]
name = "qr-signing"
description = ""
version = "0.1.0"
authors = ["Andreas Monitzer <metalab@monitzer.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wee_alloc = "0.4"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
qrcodegen = "1.6"
yew = "0.17"
futures = "0.3"
hmac-sha256 = "0.1"
zip = { version = "0.5", default-features = false }
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlInputElement",
    "HtmlAnchorElement",
    "Event",
    "EventTarget",
    "Crypto",
    "CryptoKey",
    "CryptoKeyPair",
    "SubtleCrypto",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "File",
    "FileList",
    "TextDecoder",
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
